<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.userdata.manager.data.local.UserEntity" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="0.9"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.name}"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:maxLines="2"
                    android:layout_marginTop="6dp"
                    android:text="@{user.address}" />

                <TextView
                    android:id="@+id/user_phone_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:layout_marginTop="6dp"
                    android:text="@{user.phone}" />


            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:weightSum="0.1"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:tint="@color/teal_200"
                    android:contentDescription="@string/edit"
                    android:src="@android:drawable/ic_menu_edit"/>

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:contentDescription="@string/delete"
                    app:tint="@color/teal_200"
                    android:src="@android:drawable/ic_menu_delete"/>

            </LinearLayout>

        </LinearLayout>





    </com.google.android.material.card.MaterialCardView>

</layout>