<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12dp"
        app:cardCornerRadius="@dimen/_24dp"
        app:cardElevation="@dimen/_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_24dp"
            android:background="#FFFFFF">

            <View
                android:layout_width="@dimen/_60dp"
                android:layout_height="@dimen/_6dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="#D0D0D0" />

            <TextView
                android:id="@+id/add_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_user"
                android:textColor="#1F2937"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/enter_user_details_below"
                android:textColor="#6B7280"
                android:textSize="@dimen/_14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:hint="@string/full_name"
                app:boxBackgroundColor="#F9FAFB"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_16dp"
                app:boxCornerRadiusBottomStart="@dimen/_16dp"
                app:boxCornerRadiusTopEnd="@dimen/_16dp"
                app:boxCornerRadiusTopStart="@dimen/_16dp"
                app:startIconDrawable="@drawable/outline_account_circle_24"
                app:startIconTint="@color/teal_200"
                app:hintTextColor="#6B7280">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_50dp"
                    android:textColor="#111827"
                    android:textSize="@dimen/_15sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:hint="@string/address"
                app:boxBackgroundColor="#F9FAFB"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_16dp"
                app:boxCornerRadiusBottomStart="@dimen/_16dp"
                app:boxCornerRadiusTopEnd="@dimen/_16dp"
                app:boxCornerRadiusTopStart="@dimen/_16dp"
                app:startIconDrawable="@android:drawable/ic_dialog_map"
                app:startIconTint="@color/teal_200"
                app:hintTextColor="#6B7280">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:paddingStart="@dimen/_50dp"
                    android:textColor="#111827"
                    android:textSize="@dimen/_15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:hint="@string/phone_number"
                app:boxBackgroundColor="#F9FAFB"
                app:boxBackgroundMode="filled"
                app:boxCornerRadiusBottomEnd="@dimen/_16dp"
                app:boxCornerRadiusBottomStart="@dimen/_16dp"
                app:boxCornerRadiusTopEnd="@dimen/_16dp"
                app:boxCornerRadiusTopStart="@dimen/_16dp"
                app:startIconDrawable="@android:drawable/ic_menu_call"
                app:startIconTint="@color/teal_200"
                app:hintTextColor="#6B7280">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingStart="@dimen/_50dp"
                    android:textColor="#111827"
                    android:textSize= "@dimen/_15sp">


                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56dp"
                android:layout_marginTop="@dimen/_28dp"
                android:text="@string/save_user"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_16sp"
                app:backgroundTint="@color/teal_200"
                app:cornerRadius="@dimen/_18dp"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
